--- a/templates/email/confirm-account.html
+++ b/templates/email/confirm-account.html
@@ -1,3 +1,3 @@
-Bienvenue {{name}} sur {{app_name}}!
+Bienvenue {{lastname}} sur {{app_name}}!
 
 Pour confirmer votre adresse email, veuillez cliquer sur le lien ci-dessous: {{link}}
